--- a/Compilers/Compilers.vcxproj.filters
+++ b/Compilers/Compilers.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClInclude Include="ASTType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ASTOp2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ASTOp1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AST.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Scanner.cpp">
@@ -102,6 +111,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ASTType.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ASTOp1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ASTOp2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
