--- a/Compilers/Compilers.vcxproj
+++ b/Compilers/Compilers.vcxproj
@@ -156,11 +156,13 @@
     <ClInclude Include="ASTProcDel.h" />
     <ClInclude Include="ASTProgram.h" />
     <ClInclude Include="Scanner.h" />
+    <ClInclude Include="SymbolTable.h" />
     <ClInclude Include="Token.h" />
     <ClInclude Include="ASTVarDecl.h" />
     <ClInclude Include="Wrapper.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AST.cpp" />
     <ClCompile Include="ASTBlock.cpp" />
     <ClCompile Include="ASTConstDecl.cpp" />
     <ClCompile Include="ASTExpr.cpp" />
@@ -173,6 +175,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Scanner.cpp" />
+    <ClCompile Include="SymbolTable.cpp" />
     <ClCompile Include="Token.cpp" />
     <ClCompile Include="Wrapper.cpp" />
   </ItemGroup>
